--- a/index.html
+++ b/index.html
@@ -63,7 +63,10 @@
         <section id="contact" class="container mt-md-5">
           <h class="text-center text-bg-success mb-1 fst-italic">Contact Kami  Hp : 087882594460   Wa: 087882594460</h>
 
-          <div id="notification" class="alert alert-success mt-3 d-none" role="alert">PESAN TELAH TERKIRIM</div>
+          <div class="alert alert-success alert-dismissible fade show d-none my-alert" role="alert">
+            <strongoly>Terima kasih</strong>Pesan telah terkirim.
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+          </div>
 
           <h5 class="text-center mt-4">ORDER SERVICE</h5>
 
@@ -113,12 +116,15 @@
       </div>
 
       <div class="col-8 mb-5">
-        <button id="sendButton" class="btn btn-primary">KIRIM</button>
+        <button class="btn btn-primary btn-kirim" type="submit">Kirim</button>
+        <button class="btn btn-primary btn-loading d-none" type="button" disabled>
+          <span class="spinner-border spinner-border-sm" aria-hidden="true"></span>
+          <span role="status">Loading...</span>
+        </button> 
       </div>
      
     </form>
   </section>
-
  
     <script src="script.js"></script>   
      
@@ -128,14 +134,31 @@
 
 <script>
   const scriptURL = 'https://script.google.com/macros/s/AKfycbw3k7bD2q2U64gIkTtD2lQ_UBB_44AB4fADRcTk0xB71QfK7mKlM3qSmNqyU2GPCY94/exec'
-  const form = document.forms["Website-Sunarno-Service-contact-form"]
+  const form = document.forms["Website-Sunarno-Service-contact-form"];
+  const btnKirim = document.querySelector('.btn-kirim');
+  const btnLoading = document.querySelector('.btn-loading');
+  const myAlert = document.querySelector('.btn-my-alert');
 
   form.addEventListener('submit', e => {
-    e.preventDefault()
+    e.preventDefault();
+    //ketika tombol submit diklik
+    //tampilkan tombol loading,hilangkan tombol kirim
+    btnLoading.classList.toggle('d-none');
+    btnKirim.classList.toggle('d-none');
+
     fetch(scriptURL, { method: 'POST', body: new FormData(form)})
-      .then(response => console.log('Success!', response))
-      .catch(error => console.error('Error!', error.message))
-  })
+      .then((response => {
+        //tampilkan tombol kirim, hilangkan tombol loading
+        btnLoading.classList.toggle('d-none');
+        btnKirim.classList.toggle('d-none');
+        //tampilkan alert
+        myAlert.classList.toggle('d-none');
+        //reset form
+        form.reset();
+        console.log('Success!', response);
+      });
+      .catch((error => console.error('Error!', error.message));
+  });
 </script>
 
   </body>
