merubah posisi alert

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
   const form = document.forms["Website-Sunarno-Service-contact-form"];
   const btnKirim = document.querySelector('.btn-kirim');
   const btnLoading = document.querySelector('.btn-loading');
-  const myAlert = document.querySelector('.btn-my-alert');
+  const myAlert = document.querySelector('.my-alert');
 
   form.addEventListener('submit', e => {
     e.preventDefault();
