merubah fungsi alert

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <h class="text-center text-bg-success mb-1 fst-italic">Contact Kami  Hp : 087882594460   Wa: 087882594460</h>
 
           <div class="alert alert-success alert-dismissible fade show d-none my-alert" role="alert">
-            <strongoly>Terima kasih</strong>Pesan telah terkirim.
+            <strong>Terima kasih</strong>Pesan telah terkirim.
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
           </div>
          
