--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         form.reset();
         console.log('Success!', response);
       })
-      .catch((error) => console.error('Error!', 'error.message'));
+      .catch((error) => console.error('Error!', error.message));
     })
   </script>
  </body>
